[package]
name = "cisco-cam-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
reqwest = { version = "0.11.13" }
rtsp-types = "0.0.4"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
